--- a/index.html
+++ b/index.html
@@ -15,76 +15,84 @@
         <!-- Logo -->
         <div class="logo flex items-center md:basis-3/12 lg:basis-4/12">
           <div>
-            <svg
-              width="26"
-              height="26"
-              viewBox="0 0 26 27"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
+            <a
+              href="https://www.figma.com/design/CHqgXss54hJjb3W2YSQT0G/Banking-Company-Website-UI-Template-Design-in-Dark-Theme-(-FREE-Editable-)-(Community)?node-id=104-599&node-type=frame&t=Pn4wnKlzIZVRYbGc-0" target="_blank"
             >
-              <path
-                d="M6.50033 13.6751L13.0003 7.17513L19.5003 13.6751L13.0003 20.1751L6.50033 13.6751Z"
-                fill="#CAFF33"
-              />
-              <path
-                d="M23.8337 9.3418L19.5003 13.6751V7.17513H13.0003L17.3337 2.8418H23.8337V9.3418Z"
-                fill="#CAFF33"
-              />
-              <path
-                d="M23.8337 18.0085L19.5003 13.6751V20.1751H13.0003L17.3337 24.5085H23.8337V18.0085Z"
-                fill="#CAFF33"
-              />
-              <path
-                d="M2.16699 18.0085L6.50033 13.6751V20.1751H13.0003L8.66699 24.5085H2.16699L2.16699 18.0085Z"
-                fill="#CAFF33"
-              />
-              <path
-                d="M2.16699 9.3418L6.50033 13.6751V7.17513H13.0003L8.66699 2.8418H2.16699L2.16699 9.3418Z"
-                fill="#CAFF33"
-              />
-            </svg>
+              <svg
+                width="26"
+                height="26"
+                viewBox="0 0 26 27"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M6.50033 13.6751L13.0003 7.17513L19.5003 13.6751L13.0003 20.1751L6.50033 13.6751Z"
+                  fill="#CAFF33"
+                />
+                <path
+                  d="M23.8337 9.3418L19.5003 13.6751V7.17513H13.0003L17.3337 2.8418H23.8337V9.3418Z"
+                  fill="#CAFF33"
+                />
+                <path
+                  d="M23.8337 18.0085L19.5003 13.6751V20.1751H13.0003L17.3337 24.5085H23.8337V18.0085Z"
+                  fill="#CAFF33"
+                />
+                <path
+                  d="M2.16699 18.0085L6.50033 13.6751V20.1751H13.0003L8.66699 24.5085H2.16699L2.16699 18.0085Z"
+                  fill="#CAFF33"
+                />
+                <path
+                  d="M2.16699 9.3418L6.50033 13.6751V7.17513H13.0003L8.66699 2.8418H2.16699L2.16699 9.3418Z"
+                  fill="#CAFF33"
+                />
+              </svg>
+            </a>
           </div>
           <div>
-            <svg
-              width="74"
-              height="12"
-              viewBox="0 0 74 12"
-              fill=""
-              xmlns="http://www.w3.org/2000/svg"
+            <a
+              href="https://www.figma.com/design/CHqgXss54hJjb3W2YSQT0G/Banking-Company-Website-UI-Template-Design-in-Dark-Theme-(-FREE-Editable-)-(Community)?node-id=104-599&node-type=frame&t=Pn4wnKlzIZVRYbGc-0" target="_blank"
             >
-              <path
-                class="fill-current text-white"
-                d="M10.5803 0.041748L6.58595 7.09481V11.7411H4.70336V7.09481L0.708984 0.041748H2.8535L5.65284 5.22291L8.43581 0.041748H10.5803Z"
-              />
-              <path
-                class="fill-current text-white"
-                d="M13.9309 11.9584C12.7304 11.9584 11.71 11.535 10.8696 10.6882C10.0293 9.84138 9.6091 8.79958 9.6091 7.56279C9.6091 6.32599 10.0293 5.28419 10.8696 4.43738C11.71 3.59056 12.7304 3.16716 13.9309 3.16716C15.1423 3.16716 16.1627 3.59056 16.9921 4.43738C17.8325 5.28419 18.2527 6.32599 18.2527 7.56279C18.2527 8.79958 17.8325 9.84138 16.9921 10.6882C16.1627 11.535 15.1423 11.9584 13.9309 11.9584ZM12.1138 9.4514C12.6049 9.9528 13.2106 10.2035 13.9309 10.2035C14.6512 10.2035 15.2569 9.9528 15.748 9.4514C16.2391 8.95 16.4847 8.32046 16.4847 7.56279C16.4847 6.80511 16.2391 6.17557 15.748 5.67417C15.2569 5.17277 14.6512 4.92207 13.9309 4.92207C13.2106 4.92207 12.6049 5.17277 12.1138 5.67417C11.6227 6.17557 11.3771 6.80511 11.3771 7.56279C11.3771 8.32046 11.6227 8.95 12.1138 9.4514Z"
-              />
-              <path
-                class="fill-current text-white"
-                d="M25.3682 3.38443H27.1362V11.7411H25.3682V10.6715C24.8334 11.5294 23.9876 11.9584 22.8307 11.9584C21.8922 11.9584 21.1337 11.652 20.5553 11.0392C19.9768 10.4264 19.6876 9.58511 19.6876 8.51545V3.38443H21.4556V8.3316C21.4556 8.95557 21.6193 9.43469 21.9467 9.76896C22.2742 10.1032 22.7216 10.2704 23.2891 10.2704C23.9112 10.2704 24.4132 10.0754 24.7952 9.68539C25.1772 9.28427 25.3682 8.67701 25.3682 7.86363V3.38443Z"
-              />
-              <path
-                class="fill-current text-white"
-                d="M30.9716 4.78836C31.419 3.75213 32.2594 3.23401 33.4926 3.23401V5.18948C32.8159 5.14491 32.2266 5.31205 31.7246 5.69088C31.2226 6.05858 30.9716 6.6714 30.9716 7.52936V11.7411H29.2036V3.38443H30.9716V4.78836Z"
-              />
-              <path
-                class="fill-current text-white"
-                d="M41.6581 5.67417C42.1601 5.94158 42.553 6.30928 42.8368 6.77726C43.1205 7.24523 43.2624 7.78563 43.2624 8.39846C43.2624 9.35669 42.9295 10.1534 42.2638 10.7885C41.5981 11.4236 40.785 11.7411 39.8246 11.7411H34.9135V0.041748H39.4645C40.403 0.041748 41.1943 0.353732 41.8382 0.9777C42.493 1.59052 42.8204 2.35934 42.8204 3.28415C42.8204 4.2981 42.433 5.09477 41.6581 5.67417ZM39.4645 1.8468H36.7961V4.92207H39.4645C39.8792 4.92207 40.2284 4.77722 40.5122 4.48752C40.7959 4.18668 40.9378 3.81898 40.9378 3.38443C40.9378 2.94988 40.7959 2.58776 40.5122 2.29806C40.2284 1.99722 39.8792 1.8468 39.4645 1.8468ZM39.8246 9.93609C40.2612 9.93609 40.6268 9.7801 40.9214 9.46812C41.227 9.14499 41.3798 8.75501 41.3798 8.29818C41.3798 7.84134 41.227 7.45693 40.9214 7.14495C40.6268 6.82182 40.2612 6.66026 39.8246 6.66026H36.7961V9.93609H39.8246Z"
-              />
-              <path
-                class="fill-current text-white"
-                d="M51.3532 3.38443H53.1212V11.7411H51.3532V10.5378C50.6875 11.4849 49.7325 11.9584 48.4884 11.9584C47.3643 11.9584 46.4039 11.535 45.6072 10.6882C44.8105 9.83024 44.4122 8.78844 44.4122 7.56279C44.4122 6.32599 44.8105 5.28419 45.6072 4.43738C46.4039 3.59056 47.3643 3.16716 48.4884 3.16716C49.7325 3.16716 50.6875 3.63513 51.3532 4.57108V3.38443ZM46.9168 9.48483C47.4079 9.98623 48.0245 10.2369 48.7667 10.2369C49.5088 10.2369 50.1254 9.98623 50.6165 9.48483C51.1076 8.97228 51.3532 8.3316 51.3532 7.56279C51.3532 6.79397 51.1076 6.15886 50.6165 5.65746C50.1254 5.14491 49.5088 4.88864 48.7667 4.88864C48.0245 4.88864 47.4079 5.14491 46.9168 5.65746C46.4257 6.15886 46.1801 6.79397 46.1801 7.56279C46.1801 8.3316 46.4257 8.97228 46.9168 9.48483Z"
-              />
-              <path
-                class="fill-current text-white"
-                d="M59.4874 3.16716C60.4259 3.16716 61.1844 3.47357 61.7628 4.0864C62.3413 4.69922 62.6305 5.54046 62.6305 6.61012V11.7411H60.8625V6.79397C60.8625 6.17 60.6988 5.69088 60.3714 5.35662C60.0439 5.02235 59.5965 4.85521 59.029 4.85521C58.4069 4.85521 57.9049 5.05577 57.5229 5.4569C57.1409 5.84688 56.9499 6.44856 56.9499 7.26195V11.7411H55.1819V3.38443H56.9499V4.45409C57.4847 3.59614 58.3305 3.16716 59.4874 3.16716Z"
-              />
-              <path
-                class="fill-current text-white"
-                d="M73.2923 11.7411H71.0496L66.5313 6.17557V11.7411H64.6488V0.041748H66.5313V5.28976L70.8859 0.041748H73.1286L68.4958 5.74102L73.2923 11.7411Z"
-              />
-            </svg>
+              <svg
+                width="74"
+                height="12"
+                viewBox="0 0 74 12"
+                fill=""
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  class="fill-current text-white"
+                  d="M10.5803 0.041748L6.58595 7.09481V11.7411H4.70336V7.09481L0.708984 0.041748H2.8535L5.65284 5.22291L8.43581 0.041748H10.5803Z"
+                />
+                <path
+                  class="fill-current text-white"
+                  d="M13.9309 11.9584C12.7304 11.9584 11.71 11.535 10.8696 10.6882C10.0293 9.84138 9.6091 8.79958 9.6091 7.56279C9.6091 6.32599 10.0293 5.28419 10.8696 4.43738C11.71 3.59056 12.7304 3.16716 13.9309 3.16716C15.1423 3.16716 16.1627 3.59056 16.9921 4.43738C17.8325 5.28419 18.2527 6.32599 18.2527 7.56279C18.2527 8.79958 17.8325 9.84138 16.9921 10.6882C16.1627 11.535 15.1423 11.9584 13.9309 11.9584ZM12.1138 9.4514C12.6049 9.9528 13.2106 10.2035 13.9309 10.2035C14.6512 10.2035 15.2569 9.9528 15.748 9.4514C16.2391 8.95 16.4847 8.32046 16.4847 7.56279C16.4847 6.80511 16.2391 6.17557 15.748 5.67417C15.2569 5.17277 14.6512 4.92207 13.9309 4.92207C13.2106 4.92207 12.6049 5.17277 12.1138 5.67417C11.6227 6.17557 11.3771 6.80511 11.3771 7.56279C11.3771 8.32046 11.6227 8.95 12.1138 9.4514Z"
+                />
+                <path
+                  class="fill-current text-white"
+                  d="M25.3682 3.38443H27.1362V11.7411H25.3682V10.6715C24.8334 11.5294 23.9876 11.9584 22.8307 11.9584C21.8922 11.9584 21.1337 11.652 20.5553 11.0392C19.9768 10.4264 19.6876 9.58511 19.6876 8.51545V3.38443H21.4556V8.3316C21.4556 8.95557 21.6193 9.43469 21.9467 9.76896C22.2742 10.1032 22.7216 10.2704 23.2891 10.2704C23.9112 10.2704 24.4132 10.0754 24.7952 9.68539C25.1772 9.28427 25.3682 8.67701 25.3682 7.86363V3.38443Z"
+                />
+                <path
+                  class="fill-current text-white"
+                  d="M30.9716 4.78836C31.419 3.75213 32.2594 3.23401 33.4926 3.23401V5.18948C32.8159 5.14491 32.2266 5.31205 31.7246 5.69088C31.2226 6.05858 30.9716 6.6714 30.9716 7.52936V11.7411H29.2036V3.38443H30.9716V4.78836Z"
+                />
+                <path
+                  class="fill-current text-white"
+                  d="M41.6581 5.67417C42.1601 5.94158 42.553 6.30928 42.8368 6.77726C43.1205 7.24523 43.2624 7.78563 43.2624 8.39846C43.2624 9.35669 42.9295 10.1534 42.2638 10.7885C41.5981 11.4236 40.785 11.7411 39.8246 11.7411H34.9135V0.041748H39.4645C40.403 0.041748 41.1943 0.353732 41.8382 0.9777C42.493 1.59052 42.8204 2.35934 42.8204 3.28415C42.8204 4.2981 42.433 5.09477 41.6581 5.67417ZM39.4645 1.8468H36.7961V4.92207H39.4645C39.8792 4.92207 40.2284 4.77722 40.5122 4.48752C40.7959 4.18668 40.9378 3.81898 40.9378 3.38443C40.9378 2.94988 40.7959 2.58776 40.5122 2.29806C40.2284 1.99722 39.8792 1.8468 39.4645 1.8468ZM39.8246 9.93609C40.2612 9.93609 40.6268 9.7801 40.9214 9.46812C41.227 9.14499 41.3798 8.75501 41.3798 8.29818C41.3798 7.84134 41.227 7.45693 40.9214 7.14495C40.6268 6.82182 40.2612 6.66026 39.8246 6.66026H36.7961V9.93609H39.8246Z"
+                />
+                <path
+                  class="fill-current text-white"
+                  d="M51.3532 3.38443H53.1212V11.7411H51.3532V10.5378C50.6875 11.4849 49.7325 11.9584 48.4884 11.9584C47.3643 11.9584 46.4039 11.535 45.6072 10.6882C44.8105 9.83024 44.4122 8.78844 44.4122 7.56279C44.4122 6.32599 44.8105 5.28419 45.6072 4.43738C46.4039 3.59056 47.3643 3.16716 48.4884 3.16716C49.7325 3.16716 50.6875 3.63513 51.3532 4.57108V3.38443ZM46.9168 9.48483C47.4079 9.98623 48.0245 10.2369 48.7667 10.2369C49.5088 10.2369 50.1254 9.98623 50.6165 9.48483C51.1076 8.97228 51.3532 8.3316 51.3532 7.56279C51.3532 6.79397 51.1076 6.15886 50.6165 5.65746C50.1254 5.14491 49.5088 4.88864 48.7667 4.88864C48.0245 4.88864 47.4079 5.14491 46.9168 5.65746C46.4257 6.15886 46.1801 6.79397 46.1801 7.56279C46.1801 8.3316 46.4257 8.97228 46.9168 9.48483Z"
+                />
+                <path
+                  class="fill-current text-white"
+                  d="M59.4874 3.16716C60.4259 3.16716 61.1844 3.47357 61.7628 4.0864C62.3413 4.69922 62.6305 5.54046 62.6305 6.61012V11.7411H60.8625V6.79397C60.8625 6.17 60.6988 5.69088 60.3714 5.35662C60.0439 5.02235 59.5965 4.85521 59.029 4.85521C58.4069 4.85521 57.9049 5.05577 57.5229 5.4569C57.1409 5.84688 56.9499 6.44856 56.9499 7.26195V11.7411H55.1819V3.38443H56.9499V4.45409C57.4847 3.59614 58.3305 3.16716 59.4874 3.16716Z"
+                />
+                <path
+                  class="fill-current text-white"
+                  d="M73.2923 11.7411H71.0496L66.5313 6.17557V11.7411H64.6488V0.041748H66.5313V5.28976L70.8859 0.041748H73.1286L68.4958 5.74102L73.2923 11.7411Z"
+                />
+              </svg>
+            </a>
           </div>
         </div>
         <!-- Menu -->
@@ -143,7 +151,7 @@
                   class="p-2 bg-green60 dark:bg-grey11 rounded-full"
                 >
                   <img
-                    class="w-4"
+                    class="w-4 h-4"
                     id="themeImg"
                     src="assets/images/icons/light-mode.svg"
                     alt=""
@@ -176,7 +184,7 @@
       </div>
       <!-- Top Container -->
       <div
-        class="flex flex-col items-center lg:items-start justify-center gap-7.5 lg:gap-10 lg:min-w-[56%]"
+        class="flex flex-col items-center lg:items-start justify-center gap-7.5 lg:gap-10 lg:flex-[1.5]"
       >
         <!-- Context -->
         <div
@@ -227,7 +235,7 @@
 
       <!-- Bottom Container -->
       <div
-        class="p-5 mx-6 flex flex-col items-center justify-center gap-4 relative text-white rounded-md z-0 lg:min-w-[35.8%]"
+        class="p-5 mx-6 flex flex-col items-center justify-center gap-4 relative text-white rounded-md z-0 lg:flex-1"
       >
         <!-- Your Transactions -->
         <div class="flex flex-col justify-center items-start w-full gap-2.5">
@@ -606,7 +614,8 @@
 
       <!-- Sub Container -->
       <div class="flex flex-col items-center justify-center gap-10">
-        <div class="flex flex-col lg:flex-row items-center lg:items-stretch justify-center gap-7.5 lg:gap-15"
+        <div
+          class="flex flex-col lg:flex-row items-center lg:items-stretch justify-center gap-7.5 lg:gap-15"
         >
           <div
             class="grid grid-cols-2 grid-rows-2 items-center justify-center gap-2.5 p-5 lg:p-10 bg-grey11 rounded-[1.25rem] relative overflow-hidden lg:flex-1"
@@ -693,11 +702,15 @@
               />
             </div>
           </div>
-          <div class="flex flex-col items-center lg:items-start justify-center gap-12 lg:flex-1">
+          <div
+            class="flex flex-col items-center lg:items-start justify-center gap-12 lg:flex-1"
+          >
             <div
               class="flex flex-col items-center lg:items-start justify-center gap-2.5 text-center lg:text-left"
             >
-              <h4 class="text-grey10 dark:text-white text-xl lg:text-2xl font-medium">
+              <h4
+                class="text-grey10 dark:text-white text-xl lg:text-2xl font-medium"
+              >
                 For Individuals
               </h4>
               <p class="text-sm text-grey70 font-light">
@@ -708,7 +721,9 @@
                 our customers
               </p>
             </div>
-            <div class="flex flex-col lg:flex-row items-center justify-center gap-7.5">
+            <div
+              class="flex flex-col lg:flex-row items-center justify-center gap-7.5"
+            >
               <div
                 class="flex flex-col items-center lg:items-start justify-center gap-0.5 text-center lg:text-left"
               >
@@ -718,7 +733,9 @@
                 </p>
               </div>
               <!-- Divider -->
-              <div class="border-b lg:border-b-0 lg:border-l border-grey15 border-dashed w-full lg:w-auto lg:h-32"></div>
+              <div
+                class="border-b lg:border-b-0 lg:border-l border-grey15 border-dashed w-full lg:w-auto lg:h-32"
+              ></div>
               <div
                 class="flex flex-col items-center lg:items-start justify-center gap-0.5 text-center lg:text-left"
               >
@@ -728,7 +745,9 @@
                 </p>
               </div>
               <!-- Divider -->
-              <div class="border-b lg:border-b-0 lg:border-l border-grey15 border-dashed w-full lg:w-auto lg:h-32"></div>
+              <div
+                class="border-b lg:border-b-0 lg:border-l border-grey15 border-dashed w-full lg:w-auto lg:h-32"
+              ></div>
               <div
                 class="flex flex-col items-center lg:items-start justify-center gap-0.5 text-center lg:text-left"
               >
@@ -748,7 +767,9 @@
             </div>
           </div>
         </div>
-        <div class="flex flex-col lg:flex-row items-center lg:items-stretch justify-center gap-7.5 lg:gap-15">
+        <div
+          class="flex flex-col lg:flex-row items-center lg:items-stretch justify-center gap-7.5 lg:gap-15"
+        >
           <div
             class="grid grid-cols-2 grid-rows-2 items-center justify-center gap-2.5 p-5 lg:p-10 bg-grey11 rounded-[1.25rem] relative overflow-hidden lg:flex-1 lg:order-2"
           >
@@ -831,11 +852,15 @@
               />
             </div>
           </div>
-          <div class="flex flex-col items-center lg:items-start justify-center gap-12 lg:flex-1 lg:order-1">
+          <div
+            class="flex flex-col items-center lg:items-start justify-center gap-12 lg:flex-1 lg:order-1"
+          >
             <div
               class="flex flex-col items-center lg:items-start justify-center gap-2.5 text-center lg:text-left"
             >
-              <h4 class="text-grey10 dark:text-white text-xl lg:text-2xl font-medium">
+              <h4
+                class="text-grey10 dark:text-white text-xl lg:text-2xl font-medium"
+              >
                 For Business
               </h4>
               <p class="text-sm text-grey70 font-light">
@@ -846,7 +871,9 @@
                 to achieve them
               </p>
             </div>
-            <div class="flex flex-col lg:flex-row items-center justify-center gap-7.5">
+            <div
+              class="flex flex-col lg:flex-row items-center justify-center gap-7.5"
+            >
               <div
                 class="flex flex-col items-center lg:items-start justify-center gap-0.5 text-center lg:text-left"
               >
@@ -856,7 +883,9 @@
                 </p>
               </div>
               <!-- Divider -->
-              <div class="border-b lg:border-b-0 lg:border-l border-grey15 border-dashed w-full lg:w-auto lg:h-32"></div>
+              <div
+                class="border-b lg:border-b-0 lg:border-l border-grey15 border-dashed w-full lg:w-auto lg:h-32"
+              ></div>
               <div
                 class="flex flex-col items-center lg:items-start justify-center gap-0.5 text-center lg:text-left"
               >
@@ -866,7 +895,9 @@
                 </p>
               </div>
               <!-- Divider -->
-              <div class="border-b lg:border-b-0 lg:border-l border-grey15 border-dashed w-full lg:w-auto lg:h-32"></div>
+              <div
+                class="border-b lg:border-b-0 lg:border-l border-grey15 border-dashed w-full lg:w-auto lg:h-32"
+              ></div>
               <div
                 class="flex flex-col items-center lg:items-start justify-center gap-0.5 text-center lg:text-left"
               >
