input number modified

--- a/signUp.html
+++ b/signUp.html
@@ -237,7 +237,7 @@
               type="number"
               id="phone-number"
               name="User-phone-number"
-              class="bg-inherit rounded-full w-full focus:outline-none"
+              class="bg-inherit rounded-full w-full focus:outline-none no-spin-buttons"
               placeholder="Enter your Phone Number"
             />
           </div>
