--- a/signUp.html
+++ b/signUp.html
@@ -260,7 +260,7 @@
             class="bg-grey11 w-full border border-grey15 rounded-full overflow-hidden flex items-center justify-between p-4"
           >
             <input
-            pttern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
+              pttern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
               data-input-password="password"
               type="password"
               id="password"
@@ -309,12 +309,14 @@
             </button>
           </div>
           <div>
-            <button
-              type="button"
-              class="w-full px-6 py-3.5 rounded-full border border-grey20 hover:border-green60 bg-grey15 hover:bg-green60 text-sm text-white hover:text-grey15 font-normal"
-            >
-              Login
-            </button>
+            <a href="login.html">
+              <button
+                type="button"
+                class="w-full px-6 py-3.5 rounded-full border border-grey20 hover:border-green60 bg-grey15 hover:bg-green60 text-sm text-white hover:text-grey15 font-normal"
+              >
+                Login
+              </button>
+            </a>
           </div>
           <div class="flex flex-col items-center justify-center gap-6">
             <div class="flex items-center justify-between gap-2.5">
