--- a/index.html
+++ b/index.html
@@ -1606,7 +1606,7 @@
       <!-- Divider -->
       <div class="border-b border-grey70 dark:border-grey15 w-full"></div>
       <div
-        class="text-sm lg:text-base grid lg:flex grid-cols-[auto auto] gap-5 text-grey11 dark:text-white90"
+        class="text-sm lg:text-base flex flex-col lg:flex-row items-start justify-center gap-5 text-grey11 dark:text-white90"
       >
         <div class="flex items-center justify-center gap-1.5">
           <div>
