--- a/signUp.html
+++ b/signUp.html
@@ -260,7 +260,7 @@
             class="bg-grey11 w-full border border-grey15 rounded-full overflow-hidden flex items-center justify-between p-4"
           >
             <input
-              pttern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
+              pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
               data-input-password="password"
               type="password"
               id="password"
